folding-at-home/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: folding
  namespace: folding-at-home
  labels:
    app: folding
spec:
  selector:
    matchLabels:
      app: folding
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: folding
    spec:
      restartPolicy: Always
      containers:
        - name: foldingathome #foldingathome
          image: lscr.io/linuxserver/foldingathome:latest #nginxdemos/hello
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "3"
              memory: 128Mi
            limits:
              cpu: "3"
              memory: 256Mi
          ports:
            - containerPort: 7396 #80
              name: folding
            - containerPort: 36330
              name: foldingservice
          volumeMounts:
            - mountPath: /config/config.xml
              name: config-xml
              subPath: config
      volumes:
        - name: config-xml
          configMap:
            name: config-xml
