folding-at-home/templates/oauth-proxy.yaml
# https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/docs/examples/auth/oauth-external-auth/oauth2-proxy.yaml
# https://kubernetes.github.io/ingress-nginx/examples/auth/oauth-external-auth/
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy-folding-at-home
  name: oauth2-proxy-folding-at-home
  namespace: kube-system
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: oauth2-proxy-folding-at-home
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy-folding-at-home
    spec:
      restartPolicy: Always
      containers:
        - args:
            - --provider=github
            - --email-domain=*
            - --github-user=andreaswachs
            - --upstream=file:///dev/null
            - --http-address=0.0.0.0:4180
            - --scope=user:email
          # Register a new application
          # https://github.com/settings/applications/new
          image: quay.io/oauth2-proxy/oauth2-proxy:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
          name: oauth2-proxy-folding-at-home
          ports:
            - containerPort: 4180
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy-folding-at-home
  name: oauth2-proxy-folding-at-home
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    k8s-app: oauth2-proxy-folding-at-home
