folding-at-home/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: folding-at-home-oauth
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/limit-rps: "20"
spec:
  ingressClassName: nginx
  rules:
    - host: fah.wachs.work
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: folding-at-home
  namespace: folding-at-home
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - fah.wachs.work
      secretName: fah-wachs-work-tls-cert-prod
  rules:
    - host: fah.wachs.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: folding-at-home-svc
                port:
                  number: 80
